--- a/index.html
+++ b/index.html
@@ -203,148 +203,7 @@ const ctx = canvas.getContext("2d", { alpha: false });
 
 const video = document.getElementById("video");
 const visCanvas = document.getElementById("visualizerCanvas");
-const gl = canvas.getContext("webgl");
-
-if (!gl) {
-  alert("WebGL not supported");
-}
-/* ================= WEBGL SETUP ================= */
-
-let program;
-let videoTexture;
-let modeUniform;
-
-function createShader(type, source){
-  const shader = gl.createShader(type);
-  gl.shaderSource(shader, source);
-  gl.compileShader(shader);
-  return shader;
-}
-
-function createProgram(vsSource, fsSource){
-  const vs = createShader(gl.VERTEX_SHADER, vsSource);
-  const fs = createShader(gl.FRAGMENT_SHADER, fsSource);
-  const prog = gl.createProgram();
-  gl.attachShader(prog, vs);
-  gl.attachShader(prog, fs);
-  gl.linkProgram(prog);
-  return prog;
-}
-  const vertexShaderSource = `
-attribute vec2 position;
-varying vec2 vUv;
-
-void main(){
-  vUv = (position + 1.0) * 0.5;
-  gl_Position = vec4(position, 0.0, 1.0);
-}
-`;
-  const fragmentShaderSource = `
-precision mediump float;
-
-uniform sampler2D uTexture;
-uniform float uMode;
-varying vec2 vUv;
-
-float luminance(vec3 color){
-  return dot(color, vec3(0.299, 0.587, 0.114));
-}
-
-void main(){
-
-  vec3 color = texture2D(uTexture, vUv).rgb;
-  float lum = luminance(color);
-
-  // MODE 0: Normal brightness
-  if(uMode < 0.5){
-    gl_FragColor = vec4(vec3(lum), 1.0);
-  }
-
-  // MODE 1: Inverted
-  else if(uMode < 1.5){
-    gl_FragColor = vec4(vec3(1.0 - lum), 1.0);
-  }
-
-  // MODE 2: Heat Map
-  else if(uMode < 2.5){
-    gl_FragColor = vec4(lum, lum * 0.3, 1.0 - lum, 1.0);
-  }
-
-  // MODE 3: Edge Boost
-  else if(uMode < 3.5){
-    float dx = 1.0 / 512.0;
-    float dy = 1.0 / 512.0;
-
-    float lumRight = luminance(texture2D(uTexture, vUv + vec2(dx,0.0)).rgb);
-    float lumUp = luminance(texture2D(uTexture, vUv + vec2(0.0,dy)).rgb);
-
-    float edge = abs(lum - lumRight) + abs(lum - lumUp);
-    gl_FragColor = vec4(vec3(edge * 4.0), 1.0);
-  }
-
-  // MODE 4: RGB Split
-  else{
-    gl_FragColor = vec4(color.r, lum, color.b, 1.0);
-  }
-}
-`;
-  function initWebGL(){
-
-  program = createProgram(vertexShaderSource, fragmentShaderSource);
-  gl.useProgram(program);
-  const textureLocation = gl.getUniformLocation(program, "uTexture");
-  gl.uniform1i(textureLocation, 0);
-  gl.useProgram(program);
-  const positionBuffer = gl.createBuffer();
-  gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer);
-
-  gl.bufferData(gl.ARRAY_BUFFER, new Float32Array([
-    -1,-1,
-     1,-1,
-    -1, 1,
-    -1, 1,
-     1,-1,
-     1, 1
-  ]), gl.STATIC_DRAW);
-
-  const positionLocation = gl.getAttribLocation(program, "position");
-  gl.enableVertexAttribArray(positionLocation);
-  gl.vertexAttribPointer(positionLocation, 2, gl.FLOAT, false, 0, 0);
-
-  videoTexture = gl.createTexture();
-  gl.bindTexture(gl.TEXTURE_2D, videoTexture);
-
-  gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_WRAP_S, gl.CLAMP_TO_EDGE);
-  gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_WRAP_T, gl.CLAMP_TO_EDGE);
-  gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MIN_FILTER, gl.LINEAR);
-
-  modeUniform = gl.getUniformLocation(program, "uMode");
-}
-  initWebGL();
-let currentMode = 0;
-
-function renderWebGL(){
-
-  if(video.readyState < 2) return;
-
-  gl.viewport(0, 0, canvas.width, canvas.height);
-
-  gl.bindTexture(gl.TEXTURE_2D, videoTexture);
-  gl.pixelStorei(gl.UNPACK_FLIP_Y_WEBGL, true);
-  gl.texImage2D(
-    gl.TEXTURE_2D,
-    0,
-    gl.RGB,
-    gl.RGB,
-    gl.UNSIGNED_BYTE,
-    video
-  );
-
-  gl.uniform1f(modeUniform, currentMode);
-
-  gl.drawArrays(gl.TRIANGLES, 0, 6);
-}
-
+const vCtx = visCanvas.getContext("2d");
 const upload = document.getElementById("videoUpload");
 const resSlider = document.getElementById("resSlider");
 const resLabel = document.getElementById("resLabel");
